<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolunteerPage">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="50dp"
        android:text="@string/hii"
        android:textAlignment="center"
        android:textColor="#5C0909"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:text="@string/aboutus"
        android:layout_marginTop="166dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:text="@string/seestd"
        android:layout_marginTop="266dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:text="@string/addwork"
        android:layout_marginTop="366dp"
         />

</RelativeLayout>