<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="238dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="177dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/editText"
        android:layout_alignEnd="@id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="73dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="396dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/editText2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="134dp"
        android:layout_marginTop="350dp"
        android:hint="@string/login"
        android:text="@string/login"
        android:layout_marginBottom="278dp"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="235dp"
        android:layout_marginTop="14dp"
        android:text="@string/adminlog"
        android:hint="@string/adminlog"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="454dp"
        android:hint="@string/skip"
        android:text="@string/skip"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="562dp"
        android:textAlignment="center"
        android:textColor="#6B0606"
        android:hint="@string/volunteerlog"
        android:text="@string/volunteerlog"
        android:textSize="24sp" />


</RelativeLayout>